@@ -10,7 +10,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -58,7 +57,7 @@ public class LogSerializerTest {
         expected.get(deployTester).add(second);
         expected.get(deployTester).add(fourth);
 
-        assertEquals(expected, serializer.fromJson(Arrays.asList(logJson, logJson), -1));
+        assertEquals(expected, serializer.fromJson(List.of(logJson, logJson), -1));
     }
 
 }
